# Stars

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  cluster.cpp  cluster.h  pieceofsky.cpp  pieceofsky.h  rand_engine.cpp  rand_engine.h  sky.cpp  sky.h  stars.cpp  stars.h  utilities.cpp  utilities.h
